--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,12 +16,14 @@
   <link href="{{ '/vendor/magnific-popup/magnific-popup.css' | relative_url }}" rel="stylesheet">
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="{{ '/css/creative.min.css' | relative_url }}" rel="stylesheet">
+  <!-- Custom Dark Mode CSS -->
+  <link href="{{ '/css/custom-dark-mode.css' | relative_url }}" rel="stylesheet">
 </head>
 
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav" style="background-color: #fff; box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 navbar-scrolled" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="{{ '/' | relative_url }}">Home</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,6 +35,9 @@
             <a class="nav-link js-scroll-trigger" href="{{ '/#about' | relative_url }}">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="{{ '/#skills' | relative_url }}">Skills</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="{{ '/#projects' | relative_url }}">Projects</a>
           </li>
           <li class="nav-item">
@@ -40,6 +45,11 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="{{ '/#contact' | relative_url }}">Contact</a>
+          </li>
+          <li class="nav-item">
+            <button id="darkModeToggle" class="btn" title="Toggle Dark Mode">
+              <i class="fas fa-moon"></i>
+            </button>
           </li>
         </ul>
       </div>
@@ -82,6 +92,7 @@
   <script src="{{ '/vendor/magnific-popup/jquery.magnific-popup.min.js' | relative_url }}"></script>
   <!-- Custom scripts for this template -->
   <script src="{{ '/js/creative.min.js' | relative_url }}"></script>
+  <script src="{{ '/js/dark-mode.js' | relative_url }}"></script>
 
 </body>
 </html>
