--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,9 @@
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 navbar-scrolled" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav" style="background-color: #fff; box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="{{ '/' | relative_url }}">Home</a>
+      <a class="navbar-brand js-scroll-trigger" href="{{ '/' | relative_url }}">Samuel Lamb</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -57,7 +57,7 @@
   </nav>
 
   <!-- Content Section -->
-  <section class="page-section" style="margin-top: 50px; min-height: 80vh;">
+  <section class="page-section" style="margin-top: 100px; min-height: 80vh;">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8">
