--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,23 +14,8 @@
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <!-- Plugin CSS -->
   <link href="{{ '/vendor/magnific-popup/magnific-popup.css' | relative_url }}" rel="stylesheet">
-  <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      darkMode: 'class',
-      theme: {
-        extend: {
-          colors: {
-            primary: {
-              DEFAULT: '#f4623a',
-              dark: '#ff8c42',
-            },
-          },
-        },
-      },
-    }
-  </script>
+  <!-- Tailwind CSS - Built file -->
+  <link href="{{ '/css/tailwind.output.css' | relative_url }}" rel="stylesheet">
   <style>
     /* Custom CSS for skills animations and components */
     .skill-progress.animate {
